bk_ida/gobmkida/c2/tryko
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/tryko/src/engine/board.c:1079:6: error: use of undeclared identifier 'off_49A4E0'
v9 = off_49A4E0[komaster]; 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/tryko/src/obj/1/board.o] Error 1
